# information-theory

./: .vimrc  Makefile  Makefile.am  README  bash_bits.sh  bits.c  configure.ac  fbits.c  frequency.c  frequency.h  hm.c  huffman.c  huffman.h  jpeg_header.h  nth-order.py  occurence.c  parse.c  test-lib.sh  test.sh
2d codes/: README.md
data_structure/: Makefile  tree.c  tree.h
huffman/: Makefile  Makefile.am  frequency.c  huffman.c  huffman.h
jpeg/: Makefile  Makefile.am  ljpeg.c  ljpeg.h  parse.c  test_zig_zag.c
primes/: gcd.c
utils/: Makefile  bits.c  bits.h  fbits.c  t.sh  xio.c  xio.h
